sandc/test/fixtures/astRegression/shouldSucceed/Package.sand
package my.awesome.pkg;

pub class Package {

}