sandc/test/fixtures/astRegression/shouldFail/productions/file/TwoPackageStatements.sand
package stmt1;
package stmt2;

pub class TwoPackageStatements {
    
}